# UC26_Software_Architecture

./: .gitignore  README.md
assignment1/: README.md  pyproject.toml  td_analysis.ipynb
assignment1/logs/: git_complexity_trend.csv  git_complexity_trend_arg_utils.csv  git_complexity_trend_gpu_model_runner.csv  results.csv  vllm_coupling_details.csv  vllm_freqs.csv  vllm_lines.csv  vllm_sum_of_coupling.csv
assignment2/: CMakeLists.txt  README.md  main.cpp
assignment2/Dynamic/: ConsoleDynamic  ConsoleDynamic.cpp  DynamicLib.cpp  libDynamic.dylib
assignment2/Static/: ConsoleStatic  ConsoleStatic.cpp  StaticLib.h
assignment2/lecture_demo/: README.md
assignment2/lecture_demo/Dynamic/: DynamicLib.dylib
assignment2/lecture_demo/Static/: StaticLib.cpp
assignment2/lib/: MathLibrary.cpp  MathLibrary.h
